@@ -32,7 +32,7 @@ include $(top_srcdir)/psxtests.am
 # (OPTIONAL) Add local stuff here using +=
 #
 
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS += -I$(top_srcdir)/include
 
 ${PGM}: $(OBJS) $(LINK_FILES)
 	$(make-exe)
